--- a/VirtualClassroom.StudentClient/MainWindow.xaml
+++ b/VirtualClassroom.StudentClient/MainWindow.xaml
@@ -1,18 +1,18 @@
 ﻿<Window x:Class="VirtualClassroom.StudentClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Student Client" Height="350" Width="525">
+        Title="Student Client" Height="350" Width="525"
+        Background="{DynamicResource WindowBackgroundBrush}">
     <Grid>
-        <WrapPanel VerticalAlignment="Center">
-            <WrapPanel VerticalAlignment="Center">
-                <StackPanel x:Name="navigation" VerticalAlignment="Center">
-                    <Button x:Name="btnViewLessons" Click="btnViewLessons_Click">View Lessons</Button>
-                    <Button x:Name="btnViewMarks" Click="btnViewMarks_Click">View Marks</Button>
-                </StackPanel>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center">
+            <WrapPanel x:Name="navigation" VerticalAlignment="Top" HorizontalAlignment="Center">
+                <Button x:Name="btnViewLessons" Click="btnViewLessons_Click" Padding="20">View Lessons</Button>
+                <Button x:Name="btnViewMarks" Click="btnViewMarks_Click" Padding="20">View Marks</Button>
             </WrapPanel>
+            
             <StackPanel>
                 <Frame x:Name="frameMainContent" NavigationUIVisibility="Hidden" />
             </StackPanel>
-        </WrapPanel>
+        </StackPanel>
     </Grid>
 </Window>
