--- a/VirtualClassroom.StudentClient/Theme.xaml
+++ b/VirtualClassroom.StudentClient/Theme.xaml
@@ -94,6 +94,7 @@
         <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
         <Setter Property="Template" Value="{DynamicResource ButtonTemplate}" />
+        <Setter Property="Padding" Value="5" />
    </Style>
 
     <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
