--- a/VirtualClassroom.StudentClient/LoginWindow.xaml
+++ b/VirtualClassroom.StudentClient/LoginWindow.xaml
@@ -13,7 +13,8 @@
                 </WrapPanel>
                 <WrapPanel Margin="10">
                     <Label>Password:</Label>
-                    <TextBox x:Name="txtPassword" Width="150" Margin="10 0 0 0"/>
+                    <!--<TextBox x:Name="txtPassword" Width="150" Margin="10 0 0 0"/>-->
+                    <PasswordBox x:Name="txtPassword" Width="150" Margin="10 0 0 0" />
                 </WrapPanel>
                 <WrapPanel HorizontalAlignment="Right">
                     <Button x:Name="btnLogin" Click="btnLogin_Click"  Margin="10">Login</Button>
