--- a/VirtualClassroom.StudentClient/ViewLessonsPage.xaml
+++ b/VirtualClassroom.StudentClient/ViewLessonsPage.xaml
@@ -15,6 +15,8 @@
                         <DataGridTextColumn Header="Subject" Binding="{Binding Path=Subject}" />
                         <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" />
                         <DataGridTextColumn Header="Homework Deadline" Binding="{Binding Path=HomeworkDeadline}" />
+                        <DataGridTextColumn Header="Has Homework" Binding="{Binding Path=HasHomework}" />
+                        <DataGridTextColumn Header="Sent Homework" Binding="{Binding Path=SentHomework}" />
                     </DataGrid.Columns>
                 </DataGrid>
                 <StackPanel>
