--- a/VirtualClassroom.StudentClient/LoginWindow.xaml
+++ b/VirtualClassroom.StudentClient/LoginWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Login" SizeToContent="WidthAndHeight"
-        Background="{DynamicResource WindowBackgroundBrush}">
+        Background="{DynamicResource WindowBackgroundBrush}" Topmost="True" 
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <xctk:BusyIndicator x:Name="busyIndicator" IsBusy="False">
             <StackPanel>
@@ -13,7 +14,6 @@
                 </WrapPanel>
                 <WrapPanel Margin="10">
                     <Label>Password:</Label>
-                    <!--<TextBox x:Name="txtPassword" Width="150" Margin="10 0 0 0"/>-->
                     <PasswordBox x:Name="txtPassword" Width="150" Margin="10 0 0 0" />
                 </WrapPanel>
                 <WrapPanel HorizontalAlignment="Right">
