--- a/VirtualClassroom.StudentClient/ViewMarksPage.xaml
+++ b/VirtualClassroom.StudentClient/ViewMarksPage.xaml
@@ -4,12 +4,13 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
 	Title="ViewMarksPage">
 
     <Grid>
-        <GroupBox Header="Marks">
-            <DataGrid x:Name="dataGridMarks" AutoGenerateColumns="False">
+        <GroupBox Header="Marks"
+                  Padding="5 10 10 10" HorizontalAlignment="Center">
+            <DataGrid x:Name="dataGridMarks" AutoGenerateColumns="False"
+                      VerticalScrollBarVisibility="Auto" MaxHeight="600">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" />
                     <DataGridTextColumn Header="Subject Name" Binding="{Binding Path=SubjectName}" />
