--- a/virtualclassroom.studentclient/AddHomeworkWindow.xaml
+++ b/virtualclassroom.studentclient/AddHomeworkWindow.xaml
@@ -2,7 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Add Homework" SizeToContent="WidthAndHeight"
-        Background="{DynamicResource WindowBackgroundBrush}">
+        Background="{DynamicResource WindowBackgroundBrush}" 
+        ShowInTaskbar="False" ResizeMode="NoResize" Topmost="True" 
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel>
             <WrapPanel Margin="10">
