--- a/virtualclassroom.studentclient/EditorWindow.xaml
+++ b/virtualclassroom.studentclient/EditorWindow.xaml
@@ -2,7 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:TeacherClient="clr-namespace:VirtualClassroom.StudentClient" 
         Title="Editor" SizeToContent="WidthAndHeight" 
-        Background="{DynamicResource WindowBackgroundBrush}">
+        Background="{DynamicResource WindowBackgroundBrush}" 
+        Topmost="True" ShowInTaskbar="False" ResizeMode="NoResize" 
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
     </Window.Resources>
     <Grid>
