--- a/VirtualClassroom.StudentClient/MainWindow.xaml
+++ b/VirtualClassroom.StudentClient/MainWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="VirtualClassroom.StudentClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Student Client" 
+        Title="Ученик - Виртуална класна стая" 
         SizeToContent="WidthAndHeight" MinHeight="350" MinWidth="600"
         Background="{DynamicResource WindowBackgroundBrush}"
         Closing="Window_Closing" WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center">
             <WrapPanel x:Name="navigation" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 10 0 20">
-                <Button x:Name="btnViewLessons" Click="btnViewLessons_Click" Padding="20">View Lessons</Button>
-                <Button x:Name="btnViewMarks" Click="btnViewMarks_Click" Padding="20">View Marks</Button>
+                <Button x:Name="btnViewLessons" Click="btnViewLessons_Click" Padding="20">Уроци</Button>
+                <Button x:Name="btnViewMarks" Click="btnViewMarks_Click" Padding="20">Оценки</Button>
             </WrapPanel>
             
             <StackPanel>
