--- a/VirtualClassroom.StudentClient/ViewMarksPage.xaml
+++ b/VirtualClassroom.StudentClient/ViewMarksPage.xaml
@@ -4,18 +4,18 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-	Title="ViewMarksPage">
+	Title="Оценки">
 
     <Grid>
-        <GroupBox Header="Marks"
+        <GroupBox Header="Оценки"
                   Padding="5 10 10 10" HorizontalAlignment="Center">
             <DataGrid x:Name="dataGridMarks" AutoGenerateColumns="False"
                       VerticalScrollBarVisibility="Auto" MaxHeight="600">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" />
-                    <DataGridTextColumn Header="Subject Name" Binding="{Binding Path=SubjectName}" />
-                    <DataGridTextColumn Header="Lesson Name" Binding="{Binding Path=LessonName}" />  
-                    <DataGridTextColumn Header="Value" Binding="{Binding Path=Value}" />
+                    <DataGridTextColumn Header="Дата" Binding="{Binding Path=Date}" />
+                    <DataGridTextColumn Header="Предмет" Binding="{Binding Path=SubjectName}" />
+                    <DataGridTextColumn Header="Урок" Binding="{Binding Path=LessonName}" />  
+                    <DataGridTextColumn Header="Оценка" Binding="{Binding Path=Value}" />
                 </DataGrid.Columns>
             </DataGrid>
         </GroupBox>
