--- a/VirtualClassroom.StudentClient/MainWindow.xaml
+++ b/VirtualClassroom.StudentClient/MainWindow.xaml
@@ -10,6 +10,7 @@
             <WrapPanel x:Name="navigation" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 10 0 20">
                 <Button x:Name="btnViewLessons" Click="btnViewLessons_Click" Padding="20">Уроци</Button>
                 <Button x:Name="btnViewMarks" Click="btnViewMarks_Click" Padding="20">Оценки</Button>
+                <Button x:Name="btnTests" Click="btnTests_Click" Padding="20">Тестове</Button>
             </WrapPanel>
             
             <StackPanel>
