--- a/virtualclassroom.studentclient/ViewTestWindow.xaml
+++ b/virtualclassroom.studentclient/ViewTestWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Решаване на тест" SizeToContent="WidthAndHeight"
         Background="{DynamicResource WindowBackgroundBrush}" ShowInTaskbar="False" 
-        ResizeMode="CanResize" WindowStartupLocation="CenterScreen" Topmost="True">
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Topmost="True">
     <Grid>
         <StackPanel>
             <WrapPanel Margin="10">
@@ -40,6 +40,10 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
+                    <WrapPanel HorizontalAlignment="Center" Margin="0 10 0 0" >
+                        <Button x:Name="btnPrevious" Click="btnPrevious_Click">Предишен въпрос</Button>
+                        <Button x:Name="btnNext" Click="btnNext_Click">Следващ въпрос</Button>
+                    </WrapPanel>
                 </StackPanel>
             </WrapPanel>
             <WrapPanel HorizontalAlignment="Right">
